--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 absl-py==2.1.0
+appnope==0.1.4
 asttokens==2.4.1
 astunparse==1.6.3
 certifi==2024.7.4
@@ -8,6 +9,9 @@ contourpy==1.2.1
 cycler==0.12.1
 debugpy==1.8.1
 decorator==5.1.1
+dill==0.3.8
+EMD-signal==1.6.2
+EntropyHub==2.0
 et-xmlfile==1.1.0
 exceptiongroup==1.2.1
 executing==2.0.1
@@ -36,18 +40,26 @@ matplotlib==3.9.0
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 ml-dtypes==0.4.0
+multiprocess==0.70.16
 namex==0.0.8
 nest-asyncio==1.6.0
+neurokit2==0.2.10
 numpy==1.26.4
 openpyxl==3.1.4
 opt-einsum==3.3.0
 optree==0.12.1
 packaging==24.1
 pandas==2.2.2
+pandas-flavor==0.6.0
 parso==0.8.4
+pathos==0.3.2
+patsy==0.5.6
 pexpect==4.9.0
 pillow==10.3.0
+pingouin==0.5.5
 platformdirs==4.2.2
+pox==0.3.4
+ppft==1.7.6.8
 prompt_toolkit==3.0.47
 protobuf==4.25.3
 psutil==6.0.0
@@ -64,8 +76,11 @@ rich==13.7.1
 scikit-learn==1.5.1
 scipy==1.13.1
 seaborn==0.13.2
+setuptools==73.0.1
 six==1.16.0
 stack-data==0.6.3
+statsmodels==0.14.3
+tabulate==0.9.0
 tensorboard==2.17.0
 tensorboard-data-server==0.7.2
 tensorflow==2.17.0
@@ -73,10 +88,13 @@ tensorflow-io-gcs-filesystem==0.37.1
 termcolor==2.4.0
 threadpoolctl==3.5.0
 tornado==6.4.1
+tqdm==4.66.5
 traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
 wcwidth==0.2.13
 Werkzeug==3.0.3
+wheel==0.44.0
 wrapt==1.16.0
+xarray==2024.9.0
