--- a/requirements.txt
+++ b/requirements.txt
@@ -1,100 +1,95 @@
-absl-py==2.1.0
+absl-py==2.3.1
 appnope==0.1.4
-asttokens==2.4.1
+asttokens==3.0.1
 astunparse==1.6.3
-certifi==2024.7.4
-charset-normalizer==3.3.2
-comm==0.2.2
-contourpy==1.2.1
+certifi==2025.11.12
+charset-normalizer==3.4.4
+comm==0.2.3
+contourpy==1.3.3
 cycler==0.12.1
-debugpy==1.8.1
-decorator==5.1.1
-dill==0.3.8
-EMD-signal==1.6.2
+debugpy==1.8.17
+decorator==5.2.1
+dill==0.4.0
+EMD-signal==1.6.4
 EntropyHub==2.0
-et-xmlfile==1.1.0
-exceptiongroup==1.2.1
-executing==2.0.1
-flatbuffers==24.3.25
-fonttools==4.53.0
-gast==0.6.0
+executing==2.2.1
+flatbuffers==25.9.23
+fonttools==4.61.0
+gast==0.7.0
 google-pasta==0.2.0
-grpcio==1.65.1
-h5py==3.11.0
-idna==3.7
-ipykernel==6.29.4
-ipython==8.25.0
-jedi==0.19.1
-joblib==1.4.2
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-keras==3.4.1
-keras-tuner==1.4.7
-kiwisolver==1.4.5
-kt-legacy==1.0.5
+grpcio==1.76.0
+h5py==3.15.1
+idna==3.11
+ipykernel==7.1.0
+ipython==9.7.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
+joblib==1.5.2
+jupyter_client==8.6.3
+jupyter_core==5.9.1
+keras==3.12.0
+kiwisolver==1.4.9
 libclang==18.1.1
-Markdown==3.6
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.9.0
-matplotlib-inline==0.1.7
+Markdown==3.10
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+matplotlib==3.10.7
+matplotlib-inline==0.2.1
 mdurl==0.1.2
-ml-dtypes==0.4.0
-multiprocess==0.70.16
-namex==0.0.8
+ml_dtypes==0.5.4
+multiprocess==0.70.18
+namex==0.1.0
 nest-asyncio==1.6.0
-neurokit2==0.2.10
-numpy==1.26.4
-openpyxl==3.1.4
-opt-einsum==3.3.0
-optree==0.12.1
-packaging==24.1
-pandas==2.2.2
-pandas-flavor==0.6.0
-parso==0.8.4
-pathos==0.3.2
-patsy==0.5.6
+neurokit2==0.2.12
+numpy==2.3.5
+opt_einsum==3.4.0
+optree==0.18.0
+packaging==25.0
+pandas==2.3.3
+pandas-flavor==0.8.1
+parso==0.8.5
+pathos==0.3.4
+patsy==1.0.2
 pexpect==4.9.0
-pillow==10.3.0
+pillow==12.0.0
 pingouin==0.5.5
-platformdirs==4.2.2
-pox==0.3.4
-ppft==1.7.6.8
-prompt_toolkit==3.0.47
-protobuf==4.25.3
-psutil==6.0.0
+platformdirs==4.5.0
+pox==0.3.6
+ppft==1.7.7
+prompt_toolkit==3.0.52
+protobuf==6.33.1
+psutil==7.1.3
 ptyprocess==0.7.0
-pure-eval==0.2.2
-Pygments==2.18.0
-pyparsing==3.1.2
+pure_eval==0.2.3
+Pygments==2.19.2
+pyparsing==3.2.5
 python-dateutil==2.9.0.post0
-pytz==2024.1
-PyYAML==6.0.1
-pyzmq==26.0.3
-requests==2.32.3
-rich==13.7.1
-scikit-learn==1.5.1
-scipy==1.13.1
+pytz==2025.2
+PyWavelets==1.9.0
+pyzmq==27.1.0
+requests==2.32.5
+rich==14.2.0
+scikit-learn==1.7.2
+scipy==1.16.3
 seaborn==0.13.2
-setuptools==73.0.1
-six==1.16.0
+setuptools==80.9.0
+six==1.17.0
 stack-data==0.6.3
-statsmodels==0.14.3
+statsmodels==0.14.5
 tabulate==0.9.0
-tensorboard==2.17.0
+tensorboard==2.20.0
 tensorboard-data-server==0.7.2
-tensorflow==2.17.0
-tensorflow-io-gcs-filesystem==0.37.1
-termcolor==2.4.0
-threadpoolctl==3.5.0
-tornado==6.4.1
-tqdm==4.66.5
+tensorflow==2.20.0
+termcolor==3.2.0
+threadpoolctl==3.6.0
+tornado==6.5.2
+tqdm==4.67.1
 traitlets==5.14.3
-typing_extensions==4.12.2
-tzdata==2024.1
-urllib3==2.2.2
-wcwidth==0.2.13
-Werkzeug==3.0.3
-wheel==0.44.0
-wrapt==1.16.0
-xarray==2024.9.0
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+wcwidth==0.2.14
+Werkzeug==3.1.4
+wheel==0.45.1
+wrapt==2.0.1
+xarray==2025.11.0
